--- a/CryptoParserServer/CryptoParserServer/CryptoParserServer.csproj
+++ b/CryptoParserServer/CryptoParserServer/CryptoParserServer.csproj
@@ -11,6 +11,7 @@
     <PackageReference Include="Newtonsoft.Json" Version="13.0.1" />
     <PackageReference Include="NLog" Version="5.0.1" />
     <PackageReference Include="RestSharp" Version="108.0.1" />
+    <PackageReference Include="System.IO.Compression.ZipFile" Version="4.3.0" />
     <PackageReference Include="Watson" Version="4.2.2.13" />
   </ItemGroup>
 
